--- a/app/src/main/res/layout/screen_payment.xml
+++ b/app/src/main/res/layout/screen_payment.xml
@@ -1,57 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:simplify="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:background="@color/black_opacity_40">
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:orientation="vertical">
 
-        <include layout="@layout/include_toolbar"/>
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
 
-        <com.simplify.android.sdk.view.CardEditor
-            android:id="@+id/screen_payment_cardeditor"
+            <com.simplify.android.sdk.view.CardEditor
+                android:id="@+id/screen_payment_cardeditor"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"/>
+
+            <View
+                android:id="@+id/screen_payment_cardeditor_overlay"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBottom="@id/screen_payment_cardeditor"
+                android:layout_alignLeft="@id/screen_payment_cardeditor"
+                android:layout_alignRight="@id/screen_payment_cardeditor"
+                android:layout_alignTop="@id/screen_payment_cardeditor"
+                android:background="@color/black_opacity_40"
+                android:visibility="gone"/>
+        </RelativeLayout>
+
+        <TextView
+            android:id="@+id/screen_payment_message"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            simplify:closeable="false"/>
+            android:background="@android:color/holo_red_light"
+            android:gravity="center"
+            android:paddingBottom="6dp"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:paddingTop="6dp"
+            android:text="The payment processing failed, please review your information and try again. Thanks!"
+            android:textColor="@android:color/white"
+            android:visibility="gone"/>
 
-        <!--<ScrollView-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent">-->
+        <LinearLayout
+            android:id="@+id/screen_payment_loading"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@android:color/holo_orange_dark"
+            android:orientation="vertical"
+            android:paddingBottom="6dp"
+            android:paddingTop="6dp"
+            android:visibility="gone">
 
-        <!--<LinearLayout-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:orientation="vertical">-->
+            <ProgressBar
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginBottom="4dp"/>
 
-        <!--<TextView-->
-        <!--android:id="@+id/screen_signup_phone"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_marginBottom="8dp"-->
-        <!--android:paddingLeft="10dp"-->
-        <!--android:paddingRight="10dp"/>-->
-
-        <!--<EditText-->
-        <!--android:id="@+id/screen_signup_name"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:hint="What's your name?"-->
-        <!--android:paddingLeft="10dp"-->
-        <!--android:paddingRight="10dp"/>-->
-
-        <!--</LinearLayout>-->
-        <!--</ScrollView>-->
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:text="Processing payment..."
+                android:textColor="@android:color/white"/>
+        </LinearLayout>
     </LinearLayout>
-
-    <com.oyeoye.consumer.ui.LoadingView
-        android:id="@+id/screen_payment_overlay"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:visibility="gone"/>
-
 </FrameLayout>
