--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,11 +4,10 @@
     <style name="AppTheme" parent="Theme.AppCompat.Light">
         <item name="windowNoTitle">true</item>
         <item name="windowActionBar">false</item>
-        <item name="colorPrimary">@android:color/holo_blue_light</item>
-        <item name="colorPrimaryDark">@android:color/holo_blue_dark</item>
-        <!--<item name="colorAccent">@android:color/holo_purple</item>-->
-        <!--<item name="colorControlHighlight">@android:color/holo_blue_bright</item>-->
-        <!--<item name="android:windowBackground">@android:color/white</item>-->
+        <item name="colorPrimary">@color/light_blue</item>
+        <item name="colorPrimaryDark">@color/dark_blue</item>
+        <item name="colorAccent">@color/dark_yellow</item>
+        <item name="colorControlHighlight">@color/light_yellow</item>
     </style>
 
     <style name="ToolbarStyle">
