--- a/app/src/main/res/layout/screen_pickups.xml
+++ b/app/src/main/res/layout/screen_pickups.xml
@@ -15,6 +15,9 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/screen_pickups_recyclerview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:clipToPadding="false"
+        android:padding="@dimen/screen_edge"
+        android:scrollbarStyle="outsideOverlay" />
 
 </FrameLayout>
