--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,7 +1,6 @@
 <resources>
     <!-- Default screen margins, per the Android Design guidelines. -->
-    <dimen name="activity_horizontal_margin">16dp</dimen>
-    <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="screen_edge">16dp</dimen>
 
     <!--font-->
     <dimen name="font_size_small">12sp</dimen>
@@ -19,6 +18,8 @@
     <dimen name="triple_spacing">24dp</dimen>
     <dimen name="quadruple_spacing">32dp</dimen>
 
-    <dimen name="corner_radius">3dp</dimen>
+    <dimen name="corner_radius">2dp</dimen>
+    <dimen name="card_elevation">3dp</dimen>
+
 
 </resources>
