--- a/app/src/main/res/layout/screen_deals.xml
+++ b/app/src/main/res/layout/screen_deals.xml
@@ -12,13 +12,31 @@
         android:layout_gravity="center"
         android:indeterminate="true"/>
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/screen_deals_recyclerview"
+    <Button
+        android:id="@+id/screen_deals_retry"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:background="@android:color/transparent"
+        android:gravity="center"
+        android:padding="15dp"
+        android:text="Something failed, tap to retry"
+        android:textColor="@android:color/black"
+        android:visibility="gone"/>
+
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/screen_deals_refreshlayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:clipToPadding="false"
-        android:padding="@dimen/screen_edge"
-        android:scrollbarStyle="outsideOverlay"
-        android:visibility="gone"/>
+        android:visibility="gone">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/screen_deals_recyclerview"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:clipToPadding="false"
+            android:padding="@dimen/screen_edge"
+            android:scrollbarStyle="outsideOverlay"/>
+    </android.support.v4.widget.SwipeRefreshLayout>
 
 </FrameLayout>
