--- a/app/src/main/res/layout/row_deal.xml
+++ b/app/src/main/res/layout/row_deal.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView android:id="@+id/row_deal"
-                                    style="@style/AppCardView"
-                                    xmlns:android="http://schemas.android.com/apk/res/android"
-                                    xmlns:app="http://schemas.android.com/apk/res-auto"
-                                    xmlns:tools="http://schemas.android.com/tools">
+<android.support.v7.widget.CardView
+    android:id="@+id/row_deal"
+    style="@style/AppCardView"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    >
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -123,8 +124,9 @@
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
             android:orientation="horizontal"
             android:padding="@dimen/spacing">
 
@@ -133,8 +135,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@drawable/sel_btn_dialog"
-                android:textColor="@color/light_yellow"
-                android:text="MASTER CROTTE"/>
+                android:paddingLeft="6dp"
+                android:paddingRight="6dp"
+                android:text="1-click MASTERPASS"
+                android:textColor="@color/light_yellow"/>
 
             <Button
                 android:id="@+id/row_deal_buy"
@@ -142,8 +146,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/spacing"
                 android:background="@drawable/sel_btn_dialog"
-                android:textColor="@color/light_yellow"
-                android:text="BUY"/>
+                android:paddingLeft="6dp"
+                android:paddingRight="6dp"
+                android:text="BUY"
+                android:textColor="@color/light_yellow"/>
 
         </LinearLayout>
 
