--- a/app/src/main/res/drawable/bg_btn_dialog.xml
+++ b/app/src/main/res/drawable/bg_btn_dialog.xml
@@ -2,4 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" >
     <corners android:radius="@dimen/corner_radius"/>
     <solid android:color="@android:color/white"/>
+    <padding android:left="4dp" android:right="4dp" />
 </shape>
